--- a/layouts/facultyBoilerplate.ejs
+++ b/layouts/facultyBoilerplate.ejs
@@ -10,22 +10,99 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://res.cloudinary.com/drqpxfysj/image/upload/v1716745016/logo_cxgllm.jpg">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        :root {
+            --header-bg-color: #d0cede; /* Mischka */
+            --header-text-color: #12047a; /* Deep Blue */
+        }
+
+        body {
+            background-color: var(--header-bg-color); /* Set body background to Mischka */
+            padding: 2rem;
+        }
+
+        .heading {
+            background-color: white;
+            color: var(--header-text-color);
+            border-radius: 0.5rem;
+            padding: 15px 20px;
+            display: flex;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .heading img {
+            max-height: 40px;
+            margin-right: 15px;
+        }
+
+        .heading a {
+            text-decoration: none;
+            color: var(--header-text-color);
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .nav-element {
+            margin: 10px 0;
+        }
+
+        .nav-element a {
+            text-decoration: none;
+            font-weight: 500;
+            font-size: 1.2rem;
+            color: var(--header-text-color);
+        }
+
+        .offcanvas-logo {
+            max-height: 40px;
+        }
+
+        .offcanvas-header {
+            background-color: white;
+            color: var(--header-text-color);
+        }
+
+        .offcanvas-header .offcanvas-title {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: var(--header-text-color);
+            text-decoration: none;
+        }
+
+        .btn-close {
+            color: var(--header-text-color);
+        }
+
+        .container {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-        <h1 class="heading">
+    <!-- Header Section -->
+    <h1 class="heading shadow">
         <button class="btn nav-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-            <i class="fas fa-bars" style="color: white; font-size: x-large;"></i>
+            <i class="fas fa-bars" style="font-size: x-large;"></i>
         </button>
-        <a href="/" style="text-decoration: none; color: white;">Attendance dashboard</a>
+        <a href="/" style="text-decoration: none;"><img src="/css/geethanjali.png" alt="Geethanjali Logo"></a>
     </h1>
-    <div class="container">
-        <%-include("../includes/flash.ejs")%>
-    </div>
+
+    <!-- Offcanvas Navigation -->
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasExampleLabel"><%= currUser.name %></h5>
+        <div class="offcanvas-header d-flex align-items-center">
+            <div class="d-flex align-items-center">
+                <img src="/css/geethanjali.png" alt="Geethanjali Logo" class="offcanvas-logo me-2">
+            </div>
+            <h5 class="offcanvas-title" id="offcanvasExampleLabel"></h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
@@ -34,6 +111,9 @@
             </div>
             <div class="nav-element">
                 <a href="/faculty/attendance">Attendance</a>
+            </div>
+            <div class="nav-element">
+                <a href="/faculty/section">Section</a>
             </div>
             <div class="nav-element">
                 <a href="/faculty/download">Download</a>
@@ -46,7 +126,13 @@
             </div>
         </div>
     </div>
-        <%-body %>
+
+    <!-- Main Content Section -->
+    <div class="container">
+        <%-include("../includes/flash.ejs")%>
+    </div>
+    <%-body %>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
 </body>
