--- a/views/admin/academicYears/edit.ejs
+++ b/views/admin/academicYears/edit.ejs
@@ -1,31 +1,31 @@
 <% layout("../layouts/adminBoilerplate") -%>
 <body>
   <div class="container mt-5">
-    <h1 class="mb-4">Edit Academic Year</h1>
+    <h1 class="mb-4 text-deep-blue">Edit Academic Year</h1>
     <form action="/admin/academic-years/<%= academicYear._id %>?_method=PUT" method="POST">
       <div class="row">
         <div class="col-md-6 mb-3">
-          <label for="name" class="form-label">Academic Year Name</label>
+          <label for="name" class="form-label text-kimberly">Academic Year Name</label>
           <input type="text" name="name" id="name" class="form-control" value="<%= academicYear.name %>" required>
         </div>
 
         <div class="col-md-3 mb-3">
-          <label for="startDate" class="form-label">Start Date</label>
+          <label for="startDate" class="form-label text-kimberly">Start Date</label>
           <input type="date" name="startDate" id="startDate" class="form-control" value="<%= academicYear.startDate.toISOString().split('T')[0] %>" required>
         </div>
 
         <div class="col-md-3 mb-3">
-          <label for="endDate" class="form-label">End Date</label>
+          <label for="endDate" class="form-label text-kimberly">End Date</label>
           <input type="date" name="endDate" id="endDate" class="form-control" value="<%= academicYear.endDate.toISOString().split('T')[0] %>" required>
         </div>
       </div>
 
-      <h3 class="mb-4">Semesters</h3>
+      <h3 class="mb-4 text-victoria">Semesters</h3>
       <div id="semesters" class="mb-3">
         <% academicYear.semesters.forEach((sem, index) => { %>
           <div class="row mb-3" id="semester-<%= index %>">
             <div class="col-md-4">
-              <label for="semesters[<%= index %>][sem]" class="form-label">Semester Name</label>
+              <label for="semesters[<%= index %>][sem]" class="form-label text-kimberly">Semester Name</label>
               <select name="semesters[<%= index %>][sem]" class="form-select" required>
                 <% semesters.forEach(semester => { %>
                   <option value="<%= semester._id %>" <%= semester._id.equals(sem.sem._id) ? 'selected' : '' %>><%= semester.name %></option>
@@ -33,23 +33,23 @@
               </select>
             </div>
             <div class="col-md-3">
-              <label for="semesters[<%= index %>][startDate]" class="form-label">Start Date</label>
+              <label for="semesters[<%= index %>][startDate]" class="form-label text-kimberly">Start Date</label>
               <input type="date" name="semesters[<%= index %>][startDate]" value="<%= sem.startDate.toISOString().split('T')[0] %>" class="form-control" required>
             </div>
             <div class="col-md-3">
-              <label for="semesters[<%= index %>][endDate]" class="form-label">End Date</label>
+              <label for="semesters[<%= index %>][endDate]" class="form-label text-kimberly">End Date</label>
               <input type="date" name="semesters[<%= index %>][endDate]" value="<%= sem.endDate.toISOString().split('T')[0] %>" class="form-control" required>
             </div>
             <div class="col-md-2 d-flex align-items-end">
-              <button type="button" class="btn btn-danger" onclick="removeSemester(<%= index %>)">Delete</button>
+              <button type="button" class="btn btn-danger" onclick="removeSemester(<%= index %>)" style="background-color: var(--minsk); border-color: var(--minsk);">Delete</button>
             </div>
           </div>
         <% }) %>
       </div>
 
       <div class="text-end">
-        <button type="button" class="btn btn-secondary" id="add-semester">Add Semester</button>
-        <button type="submit" class="btn btn-primary ms-2">Update Academic Year</button>
+        <button type="button" class="btn btn-secondary" id="add-semester" style="background-color: var(--amethyst-smoke); border-color: var(--amethyst-smoke);">Add Semester</button>
+        <button type="submit" class="btn btn-primary ms-2" style="background-color: var(--daisy-bush); border-color: var(--daisy-bush);">Update Academic Year</button>
       </div>
     </form>
   </div>
@@ -57,7 +57,6 @@
   <script>
     let semesterCount = <%= academicYear.semesters.length %>;
 
-    // Function to add a new semester
     function addSemester() {
       semesterCount++;
       
@@ -69,33 +68,31 @@
       const semesterHTML = `
         <div class="row mb-3" id="semester-${semesterCount}">
           <div class="col-md-4">
-            <label for="semesters[${semesterCount}][sem]" class="form-label">Semester Name</label>
+            <label for="semesters[${semesterCount}][sem]" class="form-label text-kimberly">Semester Name</label>
             <select name="semesters[${semesterCount}][sem]" class="form-select" required>
               ${semesterOptions}
             </select>
           </div>
           <div class="col-md-3">
-            <label for="semesters[${semesterCount}][startDate]" class="form-label">Start Date</label>
+            <label for="semesters[${semesterCount}][startDate]" class="form-label text-kimberly">Start Date</label>
             <input type="date" name="semesters[${semesterCount}][startDate]" class="form-control" required>
           </div>
           <div class="col-md-3">
-            <label for="semesters[${semesterCount}][endDate]" class="form-label">End Date</label>
+            <label for="semesters[${semesterCount}][endDate]" class="form-label text-kimberly">End Date</label>
             <input type="date" name="semesters[${semesterCount}][endDate]" class="form-control" required>
           </div>
           <div class="col-md-2 d-flex align-items-end">
-            <button type="button" class="btn btn-danger" onclick="removeSemester(${semesterCount})">Delete</button>
+            <button type="button" class="btn btn-danger" onclick="removeSemester(${semesterCount})" style="background-color: var(--minsk); border-color: var(--minsk);">Delete</button>
           </div>
         </div>`;
 
       document.getElementById('semesters').insertAdjacentHTML('beforeend', semesterHTML);
     }
 
-    // Function to remove a semester block
     function removeSemester(index) {
       document.getElementById(`semester-${index}`).remove();
     }
 
-    // Event listener for the "Add Semester" button
     document.getElementById('add-semester').addEventListener('click', addSemester);
   </script>
 </body>
