--- a/views/admin/academicYears/index.ejs
+++ b/views/admin/academicYears/index.ejs
@@ -1,11 +1,11 @@
 <% layout("../layouts/adminBoilerplate") -%>
 <body>
   <div class="container mt-5">
-    <h1 class="mb-4">Academic Years</h1>
-    <a href="/admin/academic-years/new" class="btn btn-success mb-3">Create New Academic Year</a>
+    <h1 class="mb-4 text-deep-blue">Academic Years</h1>
+    <a href="/admin/academic-years/new" class="btn btn-success mb-3" style="background-color: var(--daisy-bush); border-color: var(--daisy-bush);"><i class="fa-regular fa-plus"></i> Create</a>
     <div class="table-responsive">
       <table class="table table-bordered table-hover">
-        <thead>
+        <thead class="bg-deep-blue text-white">
           <tr>
             <th>Academic Year</th>
             <th>Start Date</th>
@@ -24,17 +24,20 @@
                 <ul class="list-unstyled mb-0">
                   <% year.semesters.forEach(sem => { %>
                     <li>
-                      <strong><%= sem.sem.name %></strong>: 
+                      <strong class="text-victoria"><%= sem.sem.name %></strong>: 
                       <%= sem.startDate.toDateString() %> - <%= sem.endDate.toDateString() %>
                     </li>
                   <% }) %>
                 </ul>
               </td>
               <td>
-                <a href="/admin/academic-years/<%= year._id %>/edit" class="btn btn-info btn-sm">Edit</a>
-                <form action="/admin/academic-years/<%= year._id %>?_method=DELETE" method="POST" class="d-inline">
-                  <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                </form>
+                <a href="/admin/academic-years/<%= year._id %>/edit">
+                  <i class="fa-regular fa-pen-to-square" style="font-size:x-large"></i>
+                </a>
+                <a href="#" onclick="confirmDeletion('<%= year._id %>')">
+                  <i class="fa-solid fa-trash-can" style="color: red; font-size:x-large"></i>
+                </a>
+                <form id="delete-form-<%= year._id %>" action="/admin/academic-years/<%= year._id %>?_method=DELETE" method="POST" style="display: none;"></form>
               </td>
             </tr>
           <% }) %>
@@ -42,4 +45,12 @@
       </table>
     </div>
   </div>
+
+  <script>
+    function confirmDeletion(yearId) {
+      if (confirm('Are you sure you want to delete this academic year?')) {
+        document.getElementById('delete-form-' + yearId).submit();
+      }
+    }
+  </script>
 </body>
