--- a/views/admin/student/createStudent.ejs
+++ b/views/admin/student/createStudent.ejs
@@ -1,89 +1,94 @@
-<% layout("../layouts/adminBoilerplate") -%>
+<%- layout("../layouts/adminBoilerplate") -%>
 <body style="height: 100vh; width: 100%;">
     <!-- Main Container -->
-    <div class="container text-center">
-        <!-- Course Create Form Container -->
-        <div class="course-create row align-items-center offset-3 course-card" style="margin-top: 5rem;">
-            <!-- Signup Form -->
-            <form method="post" action="/admin/student/new" class="needs-validation" novalidate>
-                <h2>Student Details</h2>
-                
-                <!-- Name Input -->
-                <div class="mb-3">
-                    <label for="name" class="form-label"></label>
-                    <input name="name" id="name" class="form-control" placeholder="Name" type="text" required>
-                    <div class="invalid-feedback">
-                        Please enter a correct name.
-                    </div>
-                </div>
-                
-                <!-- Email Input -->
-                <div class="mb-3">
-                    <label for="email" class="form-label"></label>
-                    <input name="email" id="email" class="form-control" placeholder="Email" type="email" required>
-                    <div class="invalid-feedback">
-                        Please enter a correct email.
-                    </div>
-                </div>
-                
-                <!-- Username (Roll No.) Input -->
-                <div class="mb-3">
-                    <label for="username" class="form-label"></label>
-                    <input id="username" name="username" class="form-control" placeholder="Roll No." type="text" required>
-                </div>
-                
-                <!-- Password Input -->
-                <div class="mb-3">
-                    <label for="password" class="form-label"></label>
-                    <input id="password" name="password" class="form-control" placeholder="Password" type="password" required>
-                </div>
-                
-                <!-- Year of Joining Selection -->
-                <div class="mb-3">
-                    <label for="year" class="form-label"></label>
-                    <select name="year" id="year" class="form-control" required>
-                        <option value="" disabled selected>Select Year of Joining</option>
-                        <% academicYears.forEach(function(year) { %>
-                            <option value="<%= year._id %>"><%= year.name %></option>
-                        <% }) %>
-                    </select>
-                    <div class="invalid-feedback">
-                        Please select the correct year.
-                    </div>
-                </div>
-                
-                <!-- Department Selection -->
-                <div class="mb-3">
-                    <label for="branch" class="form-label"></label>
-                    <select name="branch" id="branch" class="form-control" required disabled>
-                        <option value="" disabled selected>Select Your Branch</option>
-                    </select>
-                </div>
-                
-                <!-- Gender Selection -->
-                <div class="mb-3">
-                    <label for="gender" class="form-label"></label>
-                    <select name="gender" id="gender" class="form-control" required>
-                        <option value="" disabled selected>Select Your Gender</option>
-                        <option value="M">Male</option>
-                        <option value="F">Female</option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Please select your gender.
-                    </div>
-                </div>
-                
-                <!-- Signup Button -->
-                <button type="submit" class="btn btn-dark btn-add mt-3">Add</button>
-            </form>
+    <div class="container p-5" style="background-color: var(--mischka); border-radius: 10px;">
+        <!-- Student Create Form Container -->
+        <div class="text-center mb-4" style="color: var(--deep-blue);">
+            <h2><i class="fa fa-user-graduate me-2"></i>Student Details</h2>
         </div>
+        <!-- Student Signup Form -->
+        <form method="post" action="/admin/student/new" class="needs-validation" novalidate>
+            <!-- Name Input -->
+            <div class="mb-3">
+                <label for="name" class="form-label" style="color: var(--victoria);">Name</label>
+                <input name="name" id="name" class="form-control" placeholder="Name" type="text" required>
+                <div class="invalid-feedback">
+                    Please enter a correct name.
+                </div>
+            </div>
+
+            <!-- Email Input -->
+            <div class="mb-3">
+                <label for="email" class="form-label" style="color: var(--victoria);">Email</label>
+                <input name="email" id="email" class="form-control" placeholder="Email" type="email" required>
+                <div class="invalid-feedback">
+                    Please enter a valid email.
+                </div>
+            </div>
+
+            <!-- Username (Roll No.) Input -->
+            <div class="mb-3">
+                <label for="username" class="form-label" style="color: var(--victoria);">Roll No.</label>
+                <input id="username" name="username" class="form-control" placeholder="Roll No." type="text" required>
+                <div class="invalid-feedback">
+                    Please enter a valid roll number.
+                </div>
+            </div>
+
+            <!-- Password Input -->
+            <div class="mb-3">
+                <label for="password" class="form-label" style="color: var(--victoria);">Password</label>
+                <input id="password" name="password" class="form-control" placeholder="Password" type="password" required>
+                <div class="invalid-feedback">
+                    Please provide a password.
+                </div>
+            </div>
+
+            <!-- Year of Joining Selection -->
+            <div class="mb-3">
+                <label for="year" class="form-label" style="color: var(--victoria);">Year of Joining</label>
+                <select name="year" id="year" class="form-select" required>
+                    <option value="" disabled selected>Select Year of Joining</option>
+                    <% academicYears.forEach(function(year) { %>
+                        <option value="<%= year._id %>"><%= year.name %></option>
+                    <% }) %>
+                </select>
+                <div class="invalid-feedback">
+                    Please select the correct year.
+                </div>
+            </div>
+
+            <!-- Department Selection -->
+            <div class="mb-3">
+                <label for="branch" class="form-label" style="color: var(--victoria);">Branch</label>
+                <select name="branch" id="branch" class="form-select" required disabled>
+                    <option value="" disabled selected>Select Your Branch</option>
+                </select>
+            </div>
+
+            <!-- Gender Selection -->
+            <div class="mb-3">
+                <label for="gender" class="form-label" style="color: var(--victoria);">Gender</label>
+                <select name="gender" id="gender" class="form-select" required>
+                    <option value="" disabled selected>Select Your Gender</option>
+                    <option value="M">Male</option>
+                    <option value="F">Female</option>
+                </select>
+                <div class="invalid-feedback">
+                    Please select your gender.
+                </div>
+            </div>
+
+            <!-- Signup Button -->
+            <button type="submit" class="btn btn-primary btn-add mt-3" style="background-color: var(--deep-blue); border-color: var(--deep-blue);"><i class="fa fa-user-plus me-2"></i>Add Student</button>
+        </form>
     </div>
 
     <script>
+        // Fetch branches based on selected academic year
         document.getElementById('year').addEventListener('change', function() {
             const yearId = this.value;
             const branchSelect = document.getElementById('branch');
-            console.log(yearId);
             if (yearId) {
                 fetch(`/admin/branch/?year=${yearId}`)
                     .then(response => response.json())
@@ -103,5 +108,20 @@
                 branchSelect.disabled = true;
             }
         });
+
+        // Bootstrap form validation
+        (() => {
+            'use strict';
+            const forms = document.querySelectorAll('.needs-validation');
+            Array.from(forms).forEach((form) => {
+                form.addEventListener('submit', (event) => {
+                    if (!form.checkValidity()) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        })();
     </script>
 </body>
