--- a/views/faculty/resource/resources.ejs
+++ b/views/faculty/resource/resources.ejs
@@ -12,15 +12,7 @@
       <label for="description">Description</label>
       <textarea class="form-control" name="description" id="description"></textarea>
     </div>
-
-    <div class="form-group">
-      <label for="section">Select Section</label>
-      <select class="form-control" name="section" id="section">
-        <% sections.forEach(section => { %>
-          <option value="<%= section._id %>"><%= section.name %></option>
-        <% }) %>
-      </select>
-    </div>
+      <input type="hidden" name="section" value="<%= section._id %>">
 
     <div class="form-group">
       <label for="file">Select File</label>
